--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,8 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
     "react-select": "^5.10.1",
-    "recharts": "^2.15.3"
+    "recharts": "^2.15.3",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
