--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
     "chart.js": "^4.4.9",
     "csv-import-react": "^1.0.14",
     "date-fns": "^4.1.0",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
