--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
     "chart.js": "^4.4.9",
     "csv-import-react": "^1.0.14",
     "date-fns": "^4.1.0",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.511.0",
@@ -27,8 +29,7 @@
     "react-router-dom": "^7.6.0",
     "react-select": "^5.10.1",
     "recharts": "^2.15.3",
-    "uuid": "^11.1.0",
-    "xlsx": "^0.18.5"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
