--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-date-range": "^2.0.1",
     "react-dom": "^19.1.0",
     "react-ga4": "^2.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
     "react-select": "^5.10.1",
